# fastapi-ai-tools

./: .dockerignore  .env.azure  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  embedding_and_vector_store.ipynb  new_urls.json  pdf_loader.ipynb  pyproject.toml  pytest.ini  url_loader.ipynb
.github/workflows/: docker-image-deploy-latest.yml  run-pytest.yml  update-readme-tags.yml
_dev_nb/: embedding_and_vector_store.ipynb  pdf_loader.ipynb  url_image_loader.ipynb  url_loader.ipynb
_dev_nb/output_data/: nc_solo_pdf.json  sue_report_tdi_152064.json  xplore_pdf.json
_dev_nb/output_data/pdf_loader/: xplore_pdf_1_clean.json  xplore_pdf_1_raw.json  xplore_pdf_2_clean.json  xplore_pdf_2_raw.json  xplore_pdf_3_clean.json  xplore_pdf_3_raw.json
_dev_nb/output_data/web_loader/: setics_docs_clean.json  setics_docs_raw.json  setics_urls.json
src/: config.py  logging_conf.py  main.py
src/configs/: env_config.py  log_config.py
src/models/: chroma_infos_models.py  documents.py  documents_models.py  models.py  neo4j_infos_models.py  retriever_models.py  user.py
src/routes/: chroma_infos_router.py  documents.py  documents_router.py  embedding.py  embeddingRouter.py  neo4j_infos_router.py  retriever_router.py
src/security/: jwt_auth.py
src/security/rateLimiter/: __init__.py
src/security/rate_limiter/: __init__.py  depends.py
src/services/: chromaData.py  embedding.py  graphData.py  keywordEmbedding.py
src/services/cleaners/: __init__.py  cleaning_strategies.py  pdf_cleaner.py  setics_cleaner.py  web_cleaner.py
src/services/db/: __init__.py  chroma_service.py  neo4j_service.py
src/services/loaders/files/: __init__.py  base_document_loader.py  pdf_loader.py
src/services/loaders/lib/: __init__.py  cookie_manager.py  document_loader.py  http_client.py  session_adapter.py  url_discovery.py  url_discovery_service.py  web_authentication.py  web_document_loader.py  web_image_processor.py
src/services/loaders/web/: __init__.py  base_loader.py  base_web_loader.py  public_loader.py  setics_loader.py  web_image_loader.py
src/services/processors/: __init__.py  cleaning_strategies.py  docs_preprocess.py  pdf_cleaner.py  setics_cleaner.py
src/services/retrievers/: __init__.py  advanced_retriever.py
src/services/storages/: __init__.py  base_storage.py  blob_storage.py
src/services/utils/: __init__.py  auth_web_loader_base.py  documentLoaderService.py  document_toolkit.py  embedding_toolkit.py  httpClientService.py  publicWebLoader.py  public_web_loader_service.py  seticsWebLoaderService.py  setics_web_loader_service.py  webAuthenticationService.py
src/services/vectorstore/: __init__.py  chroma_store.py
src/test/: conftest.py
src/test/configs/: test_env_config.py
src/test/routes/: test_chroma_infos_router.py  test_documents_router.py  test_embeddingRoute.py  test_embeddingRouter.py  test_main.py  test_retriever_router.py
src/test/security/: test_jwt_auth.py  test_rate_limiter.py
src/test/services/cleaners/: test_cleaning_strategies.py  test_pdf_cleaner.py  test_setics_cleaner.py  test_web_cleaner.py
src/test/services/files/: test_pdf_loader.py
src/test/services/loaders/files/: test_base_document_loader.py
src/test/services/loaders/lib/: test_cookie_manager.py  test_document_loader.py  test_http_client.py  test_session_adapter.py  test_url_discovery.py  test_web_authentication.py  test_web_document_loader.py  test_web_image_processor.py
src/test/services/loaders/web/: test_base_loader.py  test_public_loader.py  test_setics_loader.py  test_web_image_loader.py
src/test/services/processors/: test_cleaning_strategies.py  test_docs_preprocess.py  test_pdf_cleaner.py  test_setics_cleaner.py
src/test/services/retrievers/: test_advanced_retriever.py
src/test/services/storages/: test_base_storage.py  test_blob_storage.py
src/test/services/utils/: test_document_toolkit.py  test_embedding_toolkit.py
src/test/services/vectorstore/: test_chroma_store.py
